SERVER-16485 properly clear progress meter on failed index builds